--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,20 @@
+.disable-select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 .mono {
   font-family: "Monaco", "Courier", monospace !important;
   white-space: pre;
+}
+#main {
+  width: 800px;
+  margin: 10px auto;
+  padding: 10px 20px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  color: #fafafa;
+  background: #444;
 }
