Changed color scheme

--- a/css/base.css
+++ b/css/base.css
@@ -15,6 +15,6 @@
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  color: #fafafa;
-  background: #444;
+  color: #444;
+  background: #fff;
 }
